--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.1.27",
     "gatsby-plugin-typescript-checker": "^1.1.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "gatsby-plugin-scss-typescript": "^4.0.10",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
