--- a/package.json
+++ b/package.json
@@ -18,35 +18,36 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "babel-preset-react-app": "^9.1.1",
-    "gatsby": "^2.19.7",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@types/node": "^14.11.1",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "babel-preset-react-app": "^9.1.2",
+    "gatsby": "^2.24.63",
     "gatsby-plugin-tslint": "^0.0.2",
-    "gatsby-plugin-typescript": "^2.1.27",
+    "gatsby-plugin-typescript": "^2.4.20",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "typescript": "^3.7.5"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@storybook/addon-a11y": "^5.3.12",
-    "@storybook/addon-actions": "^5.3.12",
-    "@storybook/addon-links": "^5.3.12",
-    "@storybook/addons": "^5.3.12",
-    "@storybook/react": "^5.3.12",
-    "babel-loader": "^8.0.6",
-    "gatsby-plugin-scss-typescript": "^4.0.10",
-    "node-sass": "^4.13.1",
-    "prettier": "^1.19.1",
-    "tslint": "^6.0.0",
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-a11y": "^6.0.21",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/react": "^6.0.21",
+    "babel-loader": "^8.1.0",
+    "gatsby-plugin-scss-typescript": "^4.0.13",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.1.2",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-loader": "^3.5.4",
-    "tslint-plugin-prettier": "^2.1.0",
-    "tslint-react": "^4.2.0"
+    "tslint-plugin-prettier": "^2.3.0",
+    "tslint-react": "^5.0.0"
   },
   "repository": {
     "type": "git",
