--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^16.9.8",
     "babel-preset-react-app": "^9.1.2",
     "gatsby": "^2.24.63",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.4.20",
     "gatsby-plugin-typescript-checker": "^1.1.1",
