--- a/package.json
+++ b/package.json
@@ -22,15 +22,22 @@
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "babel-preset-react-app": "^9.1.2",
     "gatsby": "^2.24.63",
+    "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-robots-txt": "^1.5.2",
+    "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.4.20",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
