--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-helmet": "^6.1.0",
     "babel-preset-react-app": "^9.1.2",
     "gatsby": "^2.24.63",
+    "gatsby-plugin-layout": "^1.3.11",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -34,6 +35,7 @@
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.4.20",
     "gatsby-plugin-typescript-checker": "^1.1.1",
+    "gatsby-source-prismic": "^3.2.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -48,6 +50,7 @@
     "@storybook/addons": "^6.0.21",
     "@storybook/react": "^6.0.21",
     "babel-loader": "^8.1.0",
+    "dotenv": "^8.2.0",
     "gatsby-plugin-scss-typescript": "^4.0.13",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
