--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-robots-txt": "^1.5.2",
+    "gatsby-plugin-segment-js": "^3.6.0",
     "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.4.20",
