--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.25",
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -45,12 +45,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-a11y": "^6.0.21",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
-    "@storybook/react": "^6.0.21",
+    "@storybook/addon-a11y": "^6.0.25",
+    "@storybook/addon-actions": "^6.0.25",
+    "@storybook/addon-links": "^6.0.25",
+    "@storybook/addons": "^6.0.25",
+    "@storybook/react": "^6.0.25",
     "babel-loader": "^8.1.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^8.2.0",
     "gatsby-plugin-scss-typescript": "^4.0.13",
     "node-sass": "^4.14.1",
