--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Check build
         run: yarn build
+
+      # Runs a set of commands using the runners shell
+      - name: Check storybook build
+        run: yarn build-storybook
